kernel/fifo: use an unused flag between pipe and fifo

instead of using O_NONBLOCK. Fixes #19195